# ariadne

./: .gitignore  .hlint-universum.yaml  .hlint.yaml  .stylish-haskell.yaml  ATTRIBUTION  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  ChangeLog.md  Description.md  Makefile  README.md  Settings.hs  appveyor.yml  ariadne.cabal  ci.nix  closure.nix  code-style.md  default.nix  import_wallet.sh  jemalloc450.nix  log-config.yaml  nix-prefetch-git  nix-prefetch-url.cc  nixpkgs.nix  pkgs.nix  release.nix  shell-native.nix  shell.nix  stack.yaml
agda/: Util.agda  (+1 more)
ariadne/: ariadne.cabal  import_wallet.sh  updating_wallet.md
ariadne/app/: Glue.hs  Main.hs
ariadne/app-qt/: Glue.hs  Main.hs
ariadne/cardano/: ariadne-cardano.cabal  import_wallet.sh  package.yaml  updating_wallet.md
ariadne/cardano/config/: topology.yaml
ariadne/cardano/src/Ariadne/: MainTemplate.hs
ariadne/cardano/src/Ariadne/Cardano/: Backend.hs  Face.hs  Knit.hs  Orphans.hs
ariadne/cardano/src/Ariadne/Config/: Ariadne.hs  CLI.hs  Cardano.hs  DhallUtil.hs  History.hs  Logging.hs  TH.hs  UI.hs  Update.hs  Wallet.hs
ariadne/cardano/src/Ariadne/Update/: Backend.hs
ariadne/cardano/src/Ariadne/Wallet/: Backend.hs  Face.hs  Knit.hs  UiAdapter.hs
ariadne/cardano/src/Ariadne/Wallet/Backend/: AddressDiscovery.hs  KeyStorage.hs  Mode.hs  Restore.hs  Tx.hs  Util.hs
ariadne/cardano/src/Ariadne/Wallet/Cardano/: Kernel.hs  WalletLayer.hs
ariadne/cardano/test/: Spec.hs
ariadne/cardano/test/Test/Ariadne/: Bip44.hs  Knit.hs
ariadne/cardano/test/Test/Ariadne/Cardano/: Arbitrary.hs
ariadne/cardano/test/Test/Ariadne/History/: Arbitrary.hs
ariadne/cardano/test/Test/Ariadne/Logging/: Arbitrary.hs
ariadne/cardano/test/Test/Ariadne/Update/: Arbitrary.hs
ariadne/cardano/test/Test/Ariadne/Wallet/: Arbitrary.hs
ariadne/cardano/test/backend/: TxMetaStorageSpecs.hs  WalletUnitTest.hs
ariadne/cardano/test/backend/InputSelection/: Evaluation.hs  FromGeneric.hs  SortedUtxo.hs  TxStats.hs
ariadne/cardano/test/backend/InputSelection/Evaluation/: Events.hs  Generic.hs  Options.hs  Replot.hs  TimeSeries.hs
ariadne/cardano/test/backend/Test/Infrastructure/: Generator.hs  Genesis.hs
ariadne/cardano/test/backend/UTxO/: Bootstrap.hs  Context.hs  Crypto.hs  DSL.hs  Generator.hs  Interpreter.hs  Translate.hs  Verify.hs
ariadne/cardano/test/backend/Util/: Buildable.hs  Distr.hs  GenHash.hs  Histogram.hs  MultiSet.hs  QuickCheck.hs  Range.hs  Validated.hs
ariadne/cardano/test/backend/Wallet/: Abstract.hs  Basic.hs  Incremental.hs  Inductive.hs  Prefiltered.hs
ariadne/core/: ariadne-core.cabal  package.yaml
ariadne/core/src/Ariadne/: Logging.hs  UIConfig.hs  Util.hs  Version.hs
ariadne/core/src/Ariadne/Knit/: Backend.hs  Face.hs  Help.hs
ariadne/core/src/Ariadne/System/: FileMode.hs
ariadne/core/src/Ariadne/TaskManager/: Backend.hs  Face.hs  Knit.hs
ariadne/core/src/Ariadne/UX/: CommandHistory.hs  PasswordManager.hs
ariadne/core/test/: Spec.hs
ariadne/core/test/Test/Ariadne/: Logging.hs
ariadne/disciplina/: README.md  package.yaml
ariadne/disciplina/exec/: Glue.hs  Main.hs
ariadne/disciplina/exec-cli/: Glue.hs  Main.hs
ariadne/disciplina/src/Dscp/Wallet/: Backend.hs  CLI.hs  Face.hs  KeyStorage.hs  Knit.hs
ariadne/src/Ariadne/: CardanoBackend.hs  CommandId.hs  Face.hs  Glue.hs  Help.hs  UI.hs  Util.hs
ariadne/src/Ariadne/Cardano/: Backend.hs  Face.hs  Knit.hs  Mode.hs  Orphans.hs
ariadne/src/Ariadne/Config/: Ariadne.hs  CLI.hs  Cardano.hs  DhallUtil.hs  History.hs  Presence.hs  TH.hs  Update.hs  Wallet.hs
ariadne/src/Ariadne/Knit/: Backend.hs  Cardano.hs  Face.hs  Help.hs
ariadne/src/Ariadne/Meta/: URL.hs
ariadne/src/Ariadne/TaskManager/: Backend.hs  Face.hs  Knit.hs
ariadne/src/Ariadne/UI/: AnsiToVty.hs  App.hs  CommandHistory.hs  Face.hs
ariadne/src/Ariadne/UI/Widget/: Repl.hs  WalletPane.hs  WalletTree.hs
ariadne/src/Ariadne/UX/: CommandHistory.hs
ariadne/src/Ariadne/Update/: Backend.hs
ariadne/src/Ariadne/Wallet/: Backend.hs  Face.hs  Knit.hs  UiAdapter.hs
ariadne/src/Ariadne/Wallet/Backend/: AddressDiscovery.hs  Balance.hs  KeyStorage.hs  Mode.hs  Restore.hs  Tx.hs  Util.hs
ariadne/src/Ariadne/Wallet/Cardano/: Kernel.hs
ariadne/test/: Spec.hs
ariadne/test/Test/Ariadne/: Knit.hs
ariadne/test/Test/Ariadne/Cardano/: Arbitrary.hs
ariadne/test/backend/: Util.hs  WalletUnitTest.hs
ariadne/test/backend/Test/Infrastructure/: Generator.hs  Genesis.hs
ariadne/test/backend/Test/Spec/: Kernel.hs  Models.hs  Translation.hs  WalletWorker.hs
ariadne/test/backend/UTxO/: Context.hs  Crypto.hs  DSL.hs  Generator.hs  Interpreter.hs  Translate.hs  Verify.hs
ariadne/test/backend/Util/: Buildable.hs  Validated.hs
ariadne/test/backend/Util/Buildable/: Hspec.hs  QuickCheck.hs
ariadne/test/backend/Wallet/: Abstract.hs  Basic.hs  Incremental.hs  Inductive.hs  Prefiltered.hs
ariadne/test/backend/Wallet/Inductive/: Cardano.hs  Generator.hs  Interpreter.hs  Invariants.hs  Validation.hs
ariadne/test/backend/Wallet/Rollback/: Basic.hs  Full.hs
knit/: README.md  knit.cabal  package.yaml
knit/src/: Knit.hs
knit/src/Knit/: Argument.hs  Autocompletion.hs  Core.hs  DisplayError.hs  Eval.hs  FormattedExprExt.hs  Inflate.hs  Name.hs  ParseTreeExt.hs  Parser.hs  Prelude.hs  Printer.hs  Procedure.hs  Syntax.hs  Tokenizer.hs  Utils.hs  Value.hs
knit/test/: Spec.hs
ui/cli-lib/: ariadne-cli-lib.cabal  package.yaml
ui/cli-lib/src/Ariadne/UI/: Cli.hs
ui/qt/: LICENSE  Setup.hs  ariadne-qt-ui.cabal  ariadne-qt.cabal
ui/qt-app/: Glue.hs  Main.hs  ariadne-qt-app.cabal  package.yaml
ui/qt-lib/: ariadne-qt-lib.cabal  package.yaml
ui/qt-lib/resources/: ariadne-qt.qrc  stylesheet.qss
ui/qt-lib/src/Ariadne/UI/: Qt.hs
ui/qt/app/: Glue.hs  Main.hs
ui/qt/resources/: ariadne-qt.qrc  stylesheet.qss
ui/qt/src/Ariadne/UI/: Qt.hs
ui/vty/: ariadne-vty-ui.cabal  ariadne-vty.cabal
ui/vty-lib/: ariadne-vty-lib.cabal  package.yaml
ui/vty-lib/src/Ariadne/UI/: Vty.hs
ui/vty/app/: Glue.hs  Main.hs
ui/vty/src/Ariadne/UI/: Vty.hs
util/: IiExtras.hs  LICENSE  ii-extras.cabal
(+285 files in other folders)
