name:           ariadne
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , brick
    , cardano-sl-auxx
    , cpphs
    , kademlia
    , lens
    , plutus-prototype
    , raw-strings-qq
    , rocksdb-haskell-ng
    , text
    , universum
    , vector
    , vty
    , word-wrap
  exposed-modules:
      UI.Wallet
      UI.Config
      UI.Help
      Ariadne.UI.Model
      Ariadne.UI.View
      Ariadne.UI.Controller
      Ariadne.UI
      Ariadne.AuxxBackend
      Ariadne.Face
  default-extensions:
      RecordWildCards
      NoImplicitPrelude
      OverloadedStrings
      LambdaCase
      RankNTypes
      TemplateHaskell
      QuasiQuotes
      FlexibleContexts
  other-modules:
      Paths_ariadne
  default-language: Haskell2010

  build-tools: cpphs >= 1.19

executable ariadne
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
    , brick
    , lens
    , async
  other-modules:
      Paths_ariadne
  default-language: Haskell2010

test-suite ariadne-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
