name:           ariadne
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , async
    , brick
    , cardano-sl
    , cardano-sl-auxx
    , cardano-sl-core
    , cardano-sl-networking
    , cardano-sl-infra
    , cardano-sl-txp
    , cardano-sl-update
    , cardano-sl-util
    , cpphs
    , constraints
    , directory
    , formatting
    , kademlia
    , lens
    , network-transport-tcp
    , log-warper
    , optparse-applicative
    , plutus-prototype
    , raw-strings-qq
    , rocksdb-haskell-ng
    , safe-exceptions
    , stm
    , text
    , temporary
    , universum
    , vector
    , vty
    , word-wrap
    , transformers
    , text-zipper
    , ansi-wl-pprint
    , loc
    , Earley
  exposed-modules:
      Ariadne.UI
      Ariadne.UI.App
      Ariadne.UI.LayerName
      Ariadne.UI.AnsiToVty
      Ariadne.UI.CommandHistory
      Ariadne.UI.Widget.Config
      Ariadne.UI.Widget.Help
      Ariadne.UI.Widget.Wallet
      Ariadne.UI.Widget.Repl
      Ariadne.AuxxBackend
      Ariadne.Face
      Ariadne.Util
  default-extensions:
      RecordWildCards
      NoImplicitPrelude
      OverloadedStrings
      LambdaCase
      RankNTypes
      TemplateHaskell
      QuasiQuotes
      FlexibleContexts
      FunctionalDependencies
      TupleSections
      FlexibleContexts
      TypeApplications
      ScopedTypeVariables
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  ghc-options: -Wall -Werror

  build-tools: cpphs >= 1.19

executable ariadne
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
    , brick
    , lens
    , async
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  ghc-options: -Wall -Werror

test-suite ariadne-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  ghc-options: -Wall -Werror
