name:           ariadne
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , ansi-wl-pprint
    , async
    , bytestring
    , cardano-sl
    , cardano-sl-block
    , cardano-sl-client
    , cardano-sl-core
    , cardano-sl-crypto
    , cardano-sl-db
    , cardano-sl-generator
    , cardano-sl-infra
    , cardano-sl-networking
    , cardano-sl-ssc
    , cardano-sl-txp
    , cardano-sl-update
    , cardano-sl-util
    , conduit
    , contravariant
    , constraints
    , containers
    , data-default
    , directory
    , exceptions
    , dhall
    , formatting
    , kademlia
    , knit
    , lens
    , log-warper
    , loot-crypto
    , megaparsec
    , memory
    , mmorph
    , mtl
    , resourcet
    , network-transport-tcp
    , optparse-applicative
    , plutus-prototype
    , raw-strings-qq
    , rocksdb-haskell-ng
    , safe-exceptions
    , scientific
    , stm
    , serokell-util
    , text
    , text-format
    , temporary
    , time-units
    , universum
    , vector
    , word-wrap
    , transformers
    , loc
    , Earley
    , time-units
    , serokell-util
    , ii-extras
    , QuickCheck
    , universum
    , unordered-containers
    , vector
    , vinyl
    , word-wrap
  exposed-modules:
      Ariadne.TaskManager.Knit
      Ariadne.TaskManager.Backend
      Ariadne.TaskManager.Face
      Ariadne.Cardano.Knit
      Ariadne.Cardano.Backend
      Ariadne.Cardano.Face
      Ariadne.Cardano.Orphans
      Ariadne.Config.Wallet
      Ariadne.Config.Ariadne
      Ariadne.Config.CLI
      Ariadne.Config.Cardano
      Ariadne.Config.DhallUtil
      Ariadne.Wallet.Knit
      Ariadne.Wallet.Backend
      Ariadne.Wallet.Backend.Balance
      Ariadne.Wallet.Backend.KeyStorage
      Ariadne.Wallet.Backend.Mode
      Ariadne.Wallet.Backend.Restore
      Ariadne.Wallet.Backend.Tx
      Ariadne.Wallet.Face
      Ariadne.Knit.Backend
      Ariadne.Knit.Face
      Ariadne.Help
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      NamedFieldPuns
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds

  build-tools: cpphs >= 1.19

executable ariadne
  main-is: Main.hs
  other-modules: Glue
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , ariadne-vty-ui
    , knit
    , ii-extras
    , base >=4.7 && <5
    , async
    , vinyl
    , universum
    , lens
    , containers
    , ansi-wl-pprint
    , text
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      NamedFieldPuns
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
      PartialTypeSignatures
  ghc-options: -Wall -Werror -fno-warn-partial-type-signatures

executable ariadne-qt
  main-is: Main.hs
  other-modules: Glue
  hs-source-dirs:
      app-qt
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , ariadne-qt-ui
    , knit
    , ii-extras
    , base >=4.7 && <5
    , async
    , vinyl
    , universum
    , lens
    , containers
    , ansi-wl-pprint
    , text
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
      PartialTypeSignatures
  ghc-options: -Wall -Werror -fno-warn-partial-type-signatures -dynamic

test-suite ariadne-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
    , bytestring
    , cardano-sl-infra
    , cardano-sl
    , cardano-sl-core
    , universum
    , text
    , time-units
    , QuickCheck
    , hspec
  other-modules:
      Paths_ariadne
      Test.Ariadne.Cardano.Arbitrary
  default-language: Haskell2010
  default-extensions:
        ApplicativeDo
        NoImplicitPrelude
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveGeneric
        DeriveFunctor
        DeriveFoldable
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NegativeLiterals
        OverloadedStrings
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        NamedFieldPuns
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ViewPatterns
        EmptyCase
        PartialTypeSignatures
  ghc-options: -Wall -Werror -Wno-unused-top-binds
