name:           ariadne
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , ansi-wl-pprint
    , acid-state
    , async
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring
    , cardano-sl
    , cardano-sl-block
    , cardano-sl-binary
    , cardano-sl-client
    , cardano-sl-core
    , cardano-sl-crypto
    , cardano-sl-db
    , cardano-sl-generator
    , cardano-sl-infra
    , cardano-sl-networking
    , cardano-sl-ssc
    , cardano-sl-txp
    , cardano-sl-update
    , cardano-sl-util
    , Cabal
    , MissingH
    , conduit
    , contravariant
    , constraints
    , containers
    , data-default
    , directory
    , dhall
    , exceptions
    , filepath
    , formatting
    , http-client
    , http-client-tls
    , insert-ordered-containers
    , kademlia
    , knit
    , lens
    , log-warper
    , loot-crypto
    , megaparsec
    , memory
    , mmorph
    , mtl
    , resourcet
    , network-transport-tcp
    , named
    , optparse-applicative
    , plutus-prototype
    , raw-strings-qq
    , rocksdb-haskell-ng
    , safe-exceptions
    , safecopy
    , ixset-typed
    , scientific
    , stm
    , serokell-util
    , sqlite-simple
    , sqlite-simple-errors
    , text
    , text-format
    , temporary
    , time
    , time-units
    , universum
    , unliftio
    , vector
    , word-wrap
    , transformers
    , loc
    , Earley
    , ii-extras
    , parsec
    , QuickCheck
    , unordered-containers
    , vinyl
    , process
    , template-haskell
    , safe
    , unliftio-core
    , monad-control
    , transformers-base
    , cryptonite
  exposed-modules:
      Ariadne.TaskManager.Knit
      Ariadne.TaskManager.Backend
      Ariadne.TaskManager.Face
      Ariadne.Update.Backend
      Ariadne.Cardano.Knit
      Ariadne.Cardano.Backend
      Ariadne.Cardano.Face
      Ariadne.Cardano.Orphans
      Ariadne.Config.Wallet
      Ariadne.Config.Ariadne
      Ariadne.Config.CLI
      Ariadne.Config.Cardano
      Ariadne.Config.History
      Ariadne.Config.Update
      Ariadne.Config.DhallUtil
      Ariadne.Config.TH
      Ariadne.Wallet.Knit
      Ariadne.Wallet.Backend
      Ariadne.Wallet.Backend.AddressDiscovery
      Ariadne.Wallet.Backend.KeyStorage
      Ariadne.Wallet.Backend.Mode
      Ariadne.Wallet.Backend.Restore
      Ariadne.Wallet.Backend.Tx
      Ariadne.Wallet.Backend.Util
      Ariadne.Wallet.Face
      Ariadne.Wallet.UiAdapter
      Ariadne.Knit.Backend
      Ariadne.Knit.Face
      Ariadne.Knit.Help
      Ariadne.UX.CommandHistory

      Ariadne.Wallet.Cardano.Kernel
      Ariadne.Wallet.Cardano.Kernel.Actions
      Ariadne.Wallet.Cardano.Kernel.Bip32
      Ariadne.Wallet.Cardano.Kernel.Bip44
      Ariadne.Wallet.Cardano.Kernel.DB.AcidState
      Ariadne.Wallet.Cardano.Kernel.DB.BlockMeta
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Create
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Delete
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Read
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Update
      Ariadne.Wallet.Cardano.Kernel.DB.InDb
      Ariadne.Wallet.Cardano.Kernel.DB.Resolved
      Ariadne.Wallet.Cardano.Kernel.DB.Spec
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Read
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Update
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Util
      Ariadne.Wallet.Cardano.Kernel.DB.Sqlite
      Ariadne.Wallet.Cardano.Kernel.DB.TxMeta
      Ariadne.Wallet.Cardano.Kernel.DB.TxMeta.Types
      Ariadne.Wallet.Cardano.Kernel.DB.Util.AcidState
      Ariadne.Wallet.Cardano.Kernel.DB.Util.IxSet
      Ariadne.Wallet.Cardano.Kernel.Decrypt
      Ariadne.Wallet.Cardano.Kernel.Diffusion
      Ariadne.Wallet.Cardano.Kernel.PrefilterTx
      Ariadne.Wallet.Cardano.Kernel.Submission
      Ariadne.Wallet.Cardano.Kernel.Types
      Ariadne.Wallet.Cardano.Kernel.Word31
      Ariadne.Wallet.Cardano.WalletLayer.Kernel
      Ariadne.Wallet.Cardano.WalletLayer.Types
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      NamedFieldPuns
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
  other-modules:
      Paths_ariadne
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints
               -Wno-unused-top-binds

  build-tools: cpphs >= 1.19

test-suite ariadne-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ariadne
    , base >=4.7 && <5
    , bytestring
    , cardano-sl-infra
    , cardano-sl
    , cardano-sl-core
    , ii-extras
    , hspec
    , knit
    , lens
    , optparse-applicative
    , QuickCheck
    , scientific
    , serokell-util
    , text
    , time-units
    , universum
  other-modules:
      Paths_ariadne
      Test.Ariadne.Cardano.Arbitrary
      Test.Ariadne.Knit
  default-language: Haskell2010
  default-extensions:
        ApplicativeDo
        NoImplicitPrelude
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveGeneric
        DeriveFunctor
        DeriveFoldable
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        MultiWayIf
        NegativeLiterals
        OverloadedStrings
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        NamedFieldPuns
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ViewPatterns
        EmptyCase
        PartialTypeSignatures
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints
