name:           knit
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      union,
      vinyl,
      text,
      formatting,
      scientific,
      split,
      text-format,
      generic-arbitrary,
      QuickCheck,
      quickcheck-instances,
      containers,
      lens,
      mtl,
      megaparsec,
      loc,
      parser-combinators,
      Earley,
      validation,
      ansi-wl-pprint,
      ii-extras,
      autoexporter
  exposed-modules:
      Knit
      Knit.Argument
      Knit.Value
      Knit.Core
      Knit.Syntax
      Knit.Name
      Knit.Eval
      Knit.Inflate
      Knit.Procedure
      Knit.Tokenizer
      Knit.Parser
      Knit.DisplayError
      Knit.Printer
  default-language:
      Haskell2010
  default-extensions:
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  ghc-options: -Wall -Werror

test-suite knit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , universum
    , ariadne
    , formatting
    , scientific
    , loc
    , knit
    , ii-extras
    , megaparsec
    , generic-arbitrary
    , text
    , hspec
    , QuickCheck
  other-modules:
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  ghc-options: -Wall
