name:           knit
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      ansi-wl-pprint
    , base >=4.7 && <5
    , containers
    , Earley
    , formatting
    , generic-arbitrary
    , lens
    , loc
    , megaparsec
    , mtl
    , ntype
    , parser-combinators
    , QuickCheck
    , quickcheck-instances
    , scientific
    , split
    , text
    , text-format
    , validation
  exposed-modules:
      Knit
      Knit.Argument
      Knit.Core
      Knit.DisplayError
      Knit.Eval
      Knit.FormattedExprExt
      Knit.Inflate
      Knit.Name
      Knit.Parser
      Knit.ParseTreeExt
      Knit.Prelude
      Knit.Printer
      Knit.Procedure
      Knit.Syntax
      Knit.Tokenizer
      Knit.Value
  default-language:
      Haskell2010
  default-extensions:
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      NoImplicitPrelude
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  ghc-options: -Wall -Werror

test-suite knit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , knit
    , loc
    , megaparsec
    , QuickCheck
    , text
    , universum
  other-modules:
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  ghc-options: -Wall -Werror
